Completed footer section along with social media icons and fixed minor margins on cart and product pages and aligned search field on search box.

--- a/assets/base.css
+++ b/assets/base.css
@@ -191,7 +191,7 @@ html.no-js .no-js-hidden {
 }
 
 .spaced-section {
-	margin-top: 5rem;
+	margin-top: 12rem;
 }
 
 .spaced-section:last-child {
