--- a/assets/component-cart.css
+++ b/assets/component-cart.css
@@ -1,209 +1,210 @@
 .cart {
-  position: relative;
-  display: block;
+	position: relative;
+	display: block;
 }
 
 .cart__empty-text,
 .is-empty .cart__contents,
 cart-items.is-empty .title-wrapper-with-link,
 .is-empty .cart__footer {
-  display: none;
+	display: none;
 }
 
 .is-empty .cart__empty-text,
 .is-empty .cart__warnings {
-  display: block;
+	display: block;
 }
 
 .cart__warnings {
-  display: none;
-  text-align: center;
-  padding: 3rem 0 1rem;
+	margin-top: 10rem;
+	display: none;
+	text-align: center;
+	padding: 3rem 0 1rem;
 }
 
 .cart__empty-text {
-  margin: 4.5rem 0 2rem;
+	margin: 4.5rem 0 2rem;
 }
 
 .cart__contents > * + * {
-  margin-top: 2.5rem;
+	margin-top: 2.5rem;
 }
 
 .cart__login-title {
-  margin: 5.5rem 0 0.5rem;
+	margin: 5.5rem 0 0.5rem;
 }
 
 .cart__login-paragraph {
-  margin-top: 0.8rem;
+	margin-top: 0.8rem;
 }
 
 .cart__login-paragraph a {
-  font-size: inherit;
+	font-size: inherit;
 }
 
 @media screen and (min-width: 990px) {
-  .cart__warnings {
-    padding: 7rem 0 1rem;
-  }
+	.cart__warnings {
+		padding: 7rem 0 1rem;
+	}
 
-  .cart__empty-text {
-    margin: 0 0 3rem;
-  }
+	.cart__empty-text {
+		margin: 0 0 3rem;
+	}
 }
 
 cart-items {
-  display: block;
+	display: block;
 }
 
 .cart__items {
-  position: relative;
-  padding-bottom: 3rem;
-  border-bottom: 0.1rem solid rgba(var(--color-foreground), 0.2);
+	position: relative;
+	padding-bottom: 3rem;
+	border-bottom: 0.1rem solid rgba(var(--color-foreground), 0.2);
 }
 
 .cart__items--disabled {
-  pointer-events: none;
+	pointer-events: none;
 }
 
 .cart__footer {
-  padding: 4rem 0 0;
+	padding: 4rem 0 0;
 }
 
 .cart__footer-wrapper:last-child .cart__footer {
-  padding-bottom: 5rem;
+	padding-bottom: 5rem;
 }
 
 .cart__footer > div:only-child {
-  margin-left: auto;
+	margin-left: auto;
 }
 
 .cart__footer > * + * {
-  margin-top: 4rem;
+	margin-top: 4rem;
 }
 
 .cart__footer .discounts {
-  margin-top: 1rem;
+	margin-top: 1rem;
 }
 
 .cart__note {
-  display: block;
+	display: block;
 }
 
 .cart__note label {
-  display: flex;
-  align-items: flex-end;
-  line-height: 1;
-  height: 1.8rem;
-  margin-bottom: 2rem;
-  color: rgba(var(--color-foreground), 0.75);
+	display: flex;
+	align-items: flex-end;
+	line-height: 1;
+	height: 1.8rem;
+	margin-bottom: 2rem;
+	color: rgba(var(--color-foreground), 0.75);
 }
 
 .cart__note .field__input {
-  padding: 1rem;
+	padding: 1rem;
 }
 
 @media screen and (min-width: 750px) {
-  .cart__items {
-    grid-column-start: 1;
-    grid-column-end: 3;
-    padding-bottom: 4rem;
-    margin-bottom: 4rem;
-  }
+	.cart__items {
+		grid-column-start: 1;
+		grid-column-end: 3;
+		padding-bottom: 4rem;
+		margin-bottom: 4rem;
+	}
 
-  .cart__contents > * + * {
-    margin-top: 0;
-  }
+	.cart__contents > * + * {
+		margin-top: 0;
+	}
 
-  .cart__items + .cart__footer {
-    grid-column: 2;
-  }
+	.cart__items + .cart__footer {
+		grid-column: 2;
+	}
 
-  .cart__footer {
-    display: flex;
-    justify-content: space-between;
-    border: 0;
-  }
+	.cart__footer {
+		display: flex;
+		justify-content: space-between;
+		border: 0;
+	}
 
-  .cart__footer-wrapper:last-child {
-    padding-top: 0;
-  }
+	.cart__footer-wrapper:last-child {
+		padding-top: 0;
+	}
 
-  .cart__footer > * {
-    width: 35rem;
-  }
+	.cart__footer > * {
+		width: 35rem;
+	}
 
-  .cart__footer > * + * {
-    margin-left: 4rem;
-    margin-top: 0;
-  }
+	.cart__footer > * + * {
+		margin-left: 4rem;
+		margin-top: 0;
+	}
 }
 
 .cart__ctas button {
-  width: 100%;
+	width: 100%;
 }
 
 .cart__ctas > *:not(noscript:first-child) + * {
-  margin-top: 1rem;
+	margin-top: 1rem;
 }
 
 .cart__update-button {
-  margin-bottom: 1rem;
+	margin-bottom: 1rem;
 }
 
 .cart__dynamic-checkout-buttons {
-  max-width: 36rem;
-  margin: 0 auto;
+	max-width: 36rem;
+	margin: 0 auto;
 }
 
 .cart__blocks > * + * {
-  margin-top: 1rem;
+	margin-top: 1rem;
 }
 
 .cart__dynamic-checkout-buttons div[role='button'] {
-  border-radius: 0 !important;
+	border-radius: 0 !important;
 }
 
 .cart-note__label {
-  display: inline-block;
-  margin-bottom: 1rem;
-  line-height: 2;
+	display: inline-block;
+	margin-bottom: 1rem;
+	line-height: 2;
 }
 
 .tax-note {
-  margin: 2.2rem 0 1.6rem auto;
-  text-align: center;
-  display: block;
+	margin: 2.2rem 0 1.6rem auto;
+	text-align: center;
+	display: block;
 }
 
 .cart__checkout-button {
-  max-width: 36rem;
+	max-width: 36rem;
 }
 
 .cart__ctas {
-  text-align: center;
+	text-align: center;
 }
 
 @media screen and (min-width: 750px) {
-  .cart-note {
-    max-width: 35rem;
-  }
+	.cart-note {
+		max-width: 35rem;
+	}
 
-  .cart__update-button {
-    margin-bottom: 0;
-    margin-right: 0.8rem;
-  }
+	.cart__update-button {
+		margin-bottom: 0;
+		margin-right: 0.8rem;
+	}
 
-  .tax-note {
-    margin-bottom: 2.2rem;
-    text-align: right;
-  }
+	.tax-note {
+		margin-bottom: 2.2rem;
+		text-align: right;
+	}
 
-  [data-shopify-buttoncontainer] {
-    justify-content: flex-end;
-  }
+	[data-shopify-buttoncontainer] {
+		justify-content: flex-end;
+	}
 
-  .cart__ctas {
-    display: flex;
-    gap: 1rem;
-  }
+	.cart__ctas {
+		display: flex;
+		gap: 1rem;
+	}
 }
